# hashcode-2020-qualification

./: .gitignore  CMakeLists.txt  README.md  launch.sh  launch_one.sh  max.cpp  structures.cpp
cpp/: books.hpp  main.cpp  max.cpp  problem.cpp  solution.cpp  solver.cmake  solver.cpp  solver.hpp
cpp/solvers/: jux.cpp  jux1.cpp  jux2.cpp  jux3.cpp  jux4.cpp  jux5.cpp  jux6.cpp  jux7.cpp  max.cpp  max2.cpp  max4_filler.cpp  max_other.cpp  max_subscription_iteration.cpp
js/: a_example.txt.out  b_read_on.txt.out  c_incunabula.txt.out  d_tough_choices.txt.out  e_so_many_books.txt.out  f_libraries_of_the_world.txt.out  index.js
perl/: best_stats.txt  extract_stats.pl  first_stats.txt
solutions/2020-02-22T10:12:58Z-max/: 2020-02-22T10:12:58Z_solution_a_example.txt
solutions/jux/1/: c_incunabula.out  e_so_many_books.out  f_libraries_of_the_world.out
solutions/jux1/: d_tough_choices.out
solutions/jux1/2020-02-21/: b_read_on.out
solutions/jux1/2020-02-22T14:31:41Z/: c_incunabula.out  f_libraries_of_the_world.out
solutions/jux1/2020-02-23T09:31:38Z/: e_so_many_books.out
solutions/jux1/2020-02-23T09:36:56Z/: d_tough_choices.out
solutions/jux2/: c_incunabula.out
solutions/jux2/2020-02-21/: e_so_many_books.out  f_libraries_of_the_world.out
solutions/jux2/2020-02-22T14:31:34Z/: e_so_many_books.out
solutions/jux2/2020-02-23T09:38:48Z/: f_libraries_of_the_world.out
solutions/jux3/: c_incunabula.out
solutions/jux3/2020-02-22/: e_so_many_books.out  f_libraries_of_the_world.out
solutions/jux4/2020-02-22T16:01:38Z/: b_read_on.out  c_incunabula.out  (+3 more)
(+19 files in other folders)
